# xva

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  xva.g4  xva.pest
.antlr/: xva.interp  xvaLexer.interp  xvaLexer.java  xvaLexer.tokens  xvaParser.java
.github/workflows/: ci.yml
archive/xva-syntax/: Cargo.toml
archive/xva-syntax/src/: ast.rs  lexer.rs  parser.rs
archive/xva-syntax/src/parser/: operator.rs
buildinfo/: Cargo.toml
compiler/: Cargo.toml
compiler/src/: lib.rs
notes/: type_checking.txt
runtime/: Cargo.toml
runtime/src/: error.rs  lib.rs  object.rs  operator.rs  value.rs
scripts/: build_grammar.sh  test_grammar.sh  tree-sitter-build-wasm.ps1  tree-sitter-generate.bat  tree-sitter-generate.sh  tree-sitter-parse.bat  tree-sitter-parse.sh
src/: cli.rs  compiler.rs  constants.rs  error_resolver.rs  machine.rs  main.rs  parser.rs  parser_peg.rs  repl.rs  syntax.rs  typecheck.rs
src/compiler/: error.rs
src/constants/: instruction.rs  mod.rs
src/machine/: bindtable.rs  bytecode.rs  code.rs  instruction.rs  istream.rs  mod.rs  opcode.rs  stack.rs  symtable.rs  vm.rs
src/parser/: ast.rs  keyword.rs  lexer.rs  mod.rs
src/parser_peg/: ast.rs
src/runtime/: mod.rs  object.rs  typing.rs
src/syntax/: ast.rs  lexer.rs  location.rs  parser.rs
src/utils/: errors.rs
syntax/: Cargo.toml
syntax/src/: language.rs  lexer.rs  lib.rs  parser.rs  tree_sitter.rs
syntax/treesitter/: grammar.js  hello.xva  package.json
tests/: main.xva  test.xva
treesitter/: Cargo.toml  grammar.js  hello.xva  package.json
treesitter/queries/: highlights.scm
treesitter/src/: grammar.json  node-types.json  parser.c
xva/: Cargo.toml  build.rs  notes.txt
xva-ast/: Cargo.toml
xva-ast/src/: ast.rs  lib.rs  node_id.rs  traits.rs
xva-buildinfo/: Cargo.toml
xva-buildinfo/src/: lib.rs
xva-compiler/: Cargo.toml
xva-compiler/src/: lib.rs
xva-macros/: Cargo.toml
xva-parse/: Cargo.toml
xva-parse/src/: error.rs  lexer.rs  lib.rs  macros.rs  parser.rs  session.rs  token.rs  traits.rs  utils.rs
xva-parse/src/lexer/: comment.rs  ident.rs  literals.rs  operators.rs
xva-parse/src/parser/: error.rs  expr.rs  expression.rs
xva-parse/src/parser/expression/: binary.rs  literal.rs  unary.rs
xva-runtime/: Cargo.toml
xva-runtime/src/: associativity.rs  error.rs  lib.rs  object.rs  value.rs  (+1 more)
xva-span/: Cargo.toml
xva-treesitter/: Cargo.toml  binding.gyp  grammar.js  main.xva  package.json
xva-treesitter/bindings/node/: index.js
xva-treesitter/bindings/rust/: lib.rs  tests.rs  utils.rs
xva-treesitter/bindings/rust/tests/: expressions.rs  literals.rs
xva-treesitter/bindings/rust/tests/expressions/: binary.rs  unary.rs
xva-treesitter/src/: grammar.json  node-types.json  parser.c
xva/src/: cli.rs  compiler.rs  error_resolver.rs  machine.rs  main.rs  opts.rs  repl.rs  syntax.rs  typecheck.rs
xva/src/compiler/: symtable.rs
xva/src/machine/: flags.rs  instruction.rs  istream.rs  opcode.rs  vm.rs
xva/src/runtime/: mod.rs
xva/src/runtime/typing/: byte_sizeable.rs
xva/src/syntax/: ast.rs  lexer.rs  parser.rs
xva/src/syntax/ast/: ast_type.rs  literal.rs  operator.rs
xva/src/syntax/lexer/: language.rs  lexeme.rs  span.rs  token_stream.rs  utils.rs
xva/tests/: test.xvo
xvasyntax/: Cargo.toml
xvasyntax/src/: ast.rs  language.rs  lexer.rs  lib.rs  parser.rs
xvasyntax/src/ast/: ast_type.rs  binary_expression.rs  declaration.rs  expression.rs  literal.rs  node.rs  root.rs  utils.rs
xvasyntax/src/parser/: event.rs  expression.rs  line_index.rs  marker.rs  operator.rs  sink.rs
xvatyping/: Cargo.toml
(+43 files in other folders)
