[package]
name = "xva"
version = "0.0.1"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.18", features = ["derive"]}
queues = "1.1.0"
chrono = "0.4.22"
built = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
expect-test = "1.4.0"
logos = "0.12.1"
logos-derive = "0.12.1"
num-traits = "0.2"
num-derive = "0.3"

[build-dependencies]
built = {version = "0.5.1", features = ["git2", "chrono", "semver"]}