[package]
name = "xva-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tree-sitter = "0.20.10"
xva-ast = { path = "../xva-ast" }
xva-treesitter = { path = "../xva-treesitter" }
xva-span = { path = "../xva-span" }
codespan-reporting = "0.11.1"
chumsky = "1.0.0-alpha.6"

[features]
lexer_debugging = []
