[package]
name = "xva-treesitter"
description = "xva grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "xva"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-xva"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
expect-test = "1.4.1"
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
