[package]
name = "xva"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive", "cargo"] }
xvasyntax = { path = "../syntax" }
xvabuildinfo = { path = "../buildinfo" }
xvacompiler = { path = "../compiler" }

