[package]
name = "xvasyntax"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
logos-derive = "0.12.1"
rowan = "0.15.10"
num-traits = "0.2"
num-derive = "0.3"
expect-test = "1.4.0"
drop_bomb = "0.1.5"
smol_str = "0.1.23"